src/main/resources/META-INF/resources/frontend/vaadin-huge-rte.css
/* ... */
/* overlays */
.tox.tox-hugerte-aux {
    .tox-menu.tox-collection.tox-collection--list.tox-selected-menu {
        border-radius: var(--hugerte-border-radius);
    }

    .tox-menu.tox-collection.tox-collection--list {
        background: var(--hugerte-overlay-background);
        box-shadow: var(--hugerte-shadow-m);
    }

    .tox-menu.tox-collection--list .tox-collection__item.tox-collection__item--active {
        color: var(--hugerte-body-text-color);
        background-color: var(--hugerte-primary-color-10pct);
    }

    .tox-menu.tox-collection.tox-collection--list {
        min-width: var(--hugerte-mce-menu-width, 200px);
    }

    .tox-menu-nav__js.tox-collection__item.tox-collection__item--enabled {
        background-color: var(--hugerte-overlay-background);
    }

    .tox-menu-nav__js.tox-collection__item.tox-collection__item {
        color: var(--hugerte-body-text-color);
    }

    .tox-menu {
        width: max-content;
    }

    .tox-fancymenuitem .tox-insert-table-picker .tox-insert-table-picker__selected {
        background-color: var(--hugerte-primary-color-10pct);
        border-color: var(--hugerte-primary-color-50pct);
    }

    .tox-fancymenuitem .tox-insert-table-picker .tox-insert-table-picker {
        border-color: var(--hugerte-border-color);
    }

    .tox-insert-table-picker {
        background-color: var(--hugerte-overlay-background);
    }

    .tox-toolbar__overflow {
        background-color: var(--hugerte-menubar-background-color) !important;
        box-shadow: var(--hugerte-shadow-m) !important;
        border: 1px solid var(--hugerte-border-color-secondary) !important;
    }

    .tox-tbtn {
        background-color: var(--hugerte-menubar-background-color);
        color: var(--hugerte-body-text-color)
    }

    .tox-tbtn--enabled:hover:not(.tox-split-button__chevron) {
        background: var(--hugerte-primary-color-50pct);
    }

    .tox-tbtn--disabled[aria-disabled="true"] .tox-icon > svg {
        fill: var(--hugerte-icon-color-disabled);
    }

    .tox-tbtn .tox-icon > svg {
        fill: var(--hugerte-icon-color);
    }

    .tox-tbtn--enabled .tox-icon > svg {
        fill: var(--hugerte-primary-contrast-color);
    }

    .tox-tbtn--enabled:hover .tox-icon > svg {
        fill: var(--hugerte-primary-contrast-color);
    }

    .tox-tbtn:focus {
        background: var(--hugerte-primary-color-10pct);
    }

    .tox-toolbar__group button.tox-tbtn:hover {
        background: var(--hugerte-hover-background);
    }

    .tox-dialog-wrapper .tox-dialog-backdrop {
        background-color: var(--hugerte-dialog-backdrop);
    }

    .tox-dialog {
        background-color: var(--hugerte-overlay-background);
        color: var(--hugerte-body-text-color);
        box-shadow: var(--hugerte-shadow-m);
        border-radius: var(--hugerte-border-radius);
    }

    .tox-dialog__header {
        background-color: var(--hugerte-overlay-background);
        color: var(--hugerte-body-text-color);
    }

    .tox-dialog__body {
        color: var(--hugerte-body-text-color);
    }

    .tox-dialog__body-content .tox-form__group h1 {
        color: var(--hugerte-body-text-color);
    }

    .tox-dialog__footer {
        background-color: var(--hugerte-overlay-background);
    }

    .tox-dialog__footer .tox-button {
        background-color: var(--hugerte-primary-color);
        color: var(--hugerte-primary-contrast-color);
        border-color: var(--hugerte-primary-color);
    }

    .tox-dialog__header .tox-button--naked {
        color: var(--hugerte-dialog-close-color);
    }

    .tox-dialog__header .tox-button--naked.tox-button--icon:hover:not(:disabled) {
        color: var(--hugerte-dialog-close-hover-color);
    }

    .tox-dialog__body-nav-item {
        color: var(--hugerte-body-text-color);
    }

    .tox-dialog__body-nav-item--active {
        color: var(--hugerte-primary-text-color);
        border-bottom: 2px solid var(--hugerte-primary-color);
    }

    .tox-pop__dialog {
        background-color: var(--hugerte-overlay-background);
        border-color: var(--hugerte-overlay-background);
    }

    .tox-pop.tox-pop--left::before {
        border-color: transparent var(--hugerte-pop-arrow-border) transparent transparent;
    }
    .tox-pop.tox-pop--left::after {
        border-color: transparent var(--hugerte-overlay-background) transparent transparent;
    }
}

